# flaskeleton-cli

./: README.md  pyproject.toml
flaskeleton_cli/: __init__.py  core.py
