[tool.poetry]
name = "flaskeleton-cli"
version = "0.1.0"
description = "CLI to create a Flask-based project"
authors = ["William B M Sampaio <56176702+WilliamSampaio@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
blue = "^0.9.1"
isort = "^5.13.2"
taskipy = "^1.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
